--- a/meme_gen_android/AndroidManifest.xml
+++ b/meme_gen_android/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.eastapps.meme_gen_android"
+    package="com.trymeme.meme_gen_android"
     android:versionCode="1"
     android:versionName="0.1.17" >
 
