--- a/meme_gen_android/AndroidManifest.xml
+++ b/meme_gen_android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.trymeme.meme_gen_android"
     android:versionCode="1"
-    android:versionName="0.1.20" >
+    android:versionName="0.1.21" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -57,13 +57,13 @@
                 android:resource="@xml/searchable" />
         </activity>
 
-        <meta-data
+       <!--  <meta-data
             android:name="com.mobclix.APPLICATION_ID"
             android:value="insert-your-application-key" />
 
         <activity
             android:name="com.mobclix.android.sdk.MobclixBrowserActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" /> -->
     </application>
 
 </manifest>
