--- a/meme_gen_android/ant.properties
+++ b/meme_gen_android/ant.properties
@@ -1,5 +1,5 @@
-key.store=keystore
-key.store.password=resario700
-key.alias=east apps
-key.alias.password=resario700
+key.store=try-meme-release.keystore
+key.store.password=Resario700
+key.alias=try-meme-keystore
+key.alias.password=Resario700
 
